# multimodal-vqa

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  README.md  SECURITY.md  demo.py  evaluate.py  infer.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  experiment_proposal.yml
.github/workflows/: ci.yml
autodl/: README.md  __init__.py  common.sh  preflight.py  prepare_data.sh  requirements.txt  run_pipeline.sh  setup.sh  start_resume.sh  status.sh  stop.sh
autodl/configs/: vilt_resume_4090d.yaml
configs/: baseline_concat.yaml  baseline_frozen.yaml  cross_attention.yaml  default.yaml  demo_comparison.yaml  demo_cpu.yaml  image_only.yaml  kaggle_finetune.yaml  kaggle_strong.yaml  kaggle_vilt.yaml  smoke_train.yaml  smoke_vilt.yaml  text_only.yaml
docs/: ARCHITECTURE.md  EXPERIMENT_REPORT.md  KAGGLE.md  TRAINING_PROTOCOL.md  TROUBLESHOOTING.md  USAGE.md
docs/evaluation/: v0.3.0-official-vqa-metrics.json  v0.3.0-official-vqa.md
docs/releases/: v0.2.0-SHA256SUMS.txt  v0.2.0.md  v0.3.0-SHA256SUMS.txt  v0.3.0.md
examples/toy_vqa_demo/: README.md  toy_predictions.jsonl  toy_questions.json
kaggle_finetune_kernel/: kernel-metadata.json  run_kaggle_finetune.py
notebooks/: kaggle_train.ipynb
scripts/: build_autodl_bundle.py  download_checkpoint.py  prepare_official_vqa_toolkit.py  prepare_vqa_data.py  run_error_analysis.py  run_model_comparison.py  run_official_vqa_eval.py  select_vilt_followup.py  summarize_experiments.py  summarize_runs.py  validate_vqa_data.py
tests/: test_autodl_bundle.py  test_checkpoint_config.py  test_dataset_validation.py  test_downloads.py  test_engine_metrics.py  test_error_analysis.py  test_experiment_summary.py  test_kaggle_runner.py  test_model_comparison_script.py  test_model_factory.py  test_model_variants.py  test_official_vqa_toolkit.py  test_project_structure.py  test_run_summary_script.py  test_tracking.py  test_training_strategy.py  test_vilt_followup.py  test_vilt_inputs.py
vqa_project/: __init__.py  answers.py  config.py  data.py  downloads.py  engine.py  hf.py  inference.py  inputs.py  model.py  tracking.py  training.py
vqa_project/analysis/: __init__.py  error_analysis.py
