[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-vqa"
version = "0.1.0"
description = "A multimodal Visual Question Answering pipeline with training, evaluation, inference, and Gradio demo support."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Dongting Shuo" }]
keywords = ["visual-question-answering", "multimodal-learning", "pytorch", "gradio"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.40",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "gradio==4.44.1",
    "gradio-client==1.3.0",
    "fastapi==0.112.4",
    "starlette==0.38.6",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
]

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0", "ruff>=0.8"]

[project.urls]
Homepage = "https://github.com/dongtingshuo/multimodal-vqa"
Documentation = "https://github.com/dongtingshuo/multimodal-vqa#readme"
Repository = "https://github.com/dongtingshuo/multimodal-vqa"
Issues = "https://github.com/dongtingshuo/multimodal-vqa/issues"

[tool.setuptools.packages.find]
include = ["vqa_project*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"demo.py" = ["E402"]
"scripts/*.py" = ["E402"]
